--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "ejs": "^2.7.4",
     "express": "^4.17.1",
     "lodash": "^4.17.21",
-    "mongoose": "^5.11.19"
+    "mongoose": "^5.11.19",
+    "mongoose-version": "^1.1.0"
   },
   "keywords": [],
   "devDependencies": {},
