--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "express": "^4.17.1",
     "lodash": "^4.17.21",
     "mongoose": "^5.11.15",
-    "mongoose-version": "^1.1.0"
+    "mongoose-version": "^1.1.0",
+    "stringify-mongoose-schema": "^1.0.4"
   },
   "keywords": [],
   "devDependencies": {},
