--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "ejs": "^2.7.4",
     "express": "^4.17.1",
     "lodash": "^4.17.21",
+    "mongo": "^0.1.0",
+    "mongodb": "^3.6.4",
     "mongoose": "^5.11.19",
     "mongoose-version": "^1.1.0",
     "stringify-mongoose-schema": "^1.0.4"
